feature: Full integrated mailer

--- a/src/mailer/templates/welcome.ejs
+++ b/src/mailer/templates/welcome.ejs
@@ -655,17 +655,15 @@
                                     letter-spacing: 0.27px;
                                   "
                                 >
-                                  Hey <%= locals.name %>,
+                                  Hey there <%= locals.name %>!
                                 </h2>
                                 <p>
-                                  Wowwee! Thanks for registering an account with
-                                  AutoSensei! You're the coolest person in all
-                                  the land (and I've met a lot of really cool
-                                  people).
+                                  Thank you for registering an account with
+                                  AutoSensei. Click below to “Verify” your
+                                  email.
                                 </p>
                                 <p>
-                                  Before we get started, we'll need to verify
-                                  your email.
+                                  Good luck on your auctions. AutoSensei Team
                                 </p>
                               </div>
                             </td>
