feature: Solve many bugs

--- a/src/mailer/templates/welcome.ejs
+++ b/src/mailer/templates/welcome.ejs
@@ -659,7 +659,7 @@
                                 </h2>
                                 <p>
                                   Thank you for registering an account with
-                                  AutoSensei. Click below to “Verify” your
+                                  AutoSensei. Enter this code to “Verify” your
                                   email.
                                 </p>
                                 <p>
@@ -700,22 +700,7 @@
                                       valign="middle"
                                       bgcolor="#A0F818"
                                     >
-                                      <a
-                                        href="<%= locals.url %>"
-                                        style="
-                                          text-decoration: none;
-                                          line-height: 100%;
-                                          color: #22282f;
-                                          font-size: 15px;
-                                          font-weight: 600;
-                                          text-transform: none;
-                                          margin: 0px;
-                                        "
-                                        target="_blank"
-                                      >
-                                        Verify Email
-                                      </a>
-                                      <%= locals.url %>
+                                      <%= locals.code %>
                                     </td>
                                   </tr>
                                 </tbody>
