--- a/src/mailer/templates/welcome.ejs
+++ b/src/mailer/templates/welcome.ejs
@@ -659,52 +659,14 @@
                                 </h2>
                                 <p>
                                   Thank you for registering an account with
-                                  AutoSensei. Enter this code to “Verify” your
+                                  AutoSensei. Enter this code <%= locals.code %> to “Verify” your
                                   email.
+                              
                                 </p>
                                 <p>
                                   Good luck on your auctions. AutoSensei Team
                                 </p>
                               </div>
-                            </td>
-                          </tr>
-                          <tr>
-                            <td
-                              style="
-                                word-break: break-word;
-                                font-size: 0px;
-                                padding: 10px 25px;
-                              "
-                              align="center"
-                            >
-                              <table
-                                role="presentation"
-                                cellpadding="0"
-                                cellspacing="0"
-                                style="border-collapse: separate"
-                                align="center"
-                                border="0"
-                              >
-                                <tbody>
-                                  <tr>
-                                    <td
-                                      style="
-                                        border: none;
-                                        border-radius: 3px;
-                                        color: white;
-                                        cursor: auto;
-                                        padding: 15px 19px;
-                                        border-radius: 8px;
-                                      "
-                                      align="center"
-                                      valign="middle"
-                                      bgcolor="#A0F818"
-                                    >
-                                      <%= locals.code %>
-                                    </td>
-                                  </tr>
-                                </tbody>
-                              </table>
                             </td>
                           </tr>
                         </tbody>
