fix: Better code

--- a/src/mailer/templates/welcome.ejs
+++ b/src/mailer/templates/welcome.ejs
@@ -659,9 +659,14 @@
                                 </h2>
                                 <p>
                                   Thank you for registering an account with
-                                  AutoSensei. Enter this code <%= locals.code %> to “Verify” your
+                                  AutoSensei. Enter this code to “Verify” your
                                   email.
                               
+                                </p>
+                                <p align="center">
+                                  <span style="font-weight: bold;font-size: 50px;">
+                                  <%= locals.code %>
+                                  </span>
                                 </p>
                                 <p>
                                   Good luck on your auctions. AutoSensei Team
