--- a/src/mailer/templates/contact.ejs
+++ b/src/mailer/templates/contact.ejs
@@ -1,7 +1,7 @@
-<div style="color: #000; max-width: 50%; background-color: #f9f9f9; max-width: 50%; margin: 0 auto; box-shadow: 0px 0px 9px -6px black; border-radius: 10px; margin: 0 auto;">
+<div style="color:#000;background-color:#f9f9f9;border-radius:10px;padding:0 2rem;">
   <%- include('./partials/header'); %>
   <div style="background-color: #f9f9f9; justify-content: center; align-items: center; gap:20px; box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1); padding: 40px 70px;">
-    <h2 style="font-family: Whitney, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif; font-weight: 500; font-size: 20px; text-align: center; color: #4f545c; letter-spacing: 0.27px; ">
+    <h2 style="padding:0 20px;font-family:Whitney, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;font-weight:500;font-size:20px;color:#4f545c;letter-spacing:0.27px;">
       Website Message
     </h2>
     <p style="text-align: justify;">
