--- a/src/mailer/templates/partials/header.ejs
+++ b/src/mailer/templates/partials/header.ejs
@@ -1,8 +1,10 @@
 <div>
-  <p style="color: rgba(73, 85, 81, 1);padding: 40px 0;font-size: 36px;font-weight: 600;line-height: 36px;text-align: center;">
+  <p style="color: rgba(73, 85, 81, 1);padding: 10px 0;font-size: 36px;font-weight: 600;line-height: 36px;text-align: center;">
     AutoSensei
   </p>
-  <div style="background-color: #22282f; padding: 57px;">
-    <p style="font-size: 36px; color: white; font-weight: 600; text-align: center">Welcome to <span style=" color:  #c1f861;">AutoSensei</span>!</p>
+  <div style="background-color: #22282f; padding: 40px;">
+    <p style="font-size: 30px; color: white; font-weight: 600; text-align: center">
+      Welcome to <span style=" color:  #c1f861;">AutoSensei</span>!
+    </p>
   </div>
 </div>
