--- a/src/mailer/templates/welcome.ejs
+++ b/src/mailer/templates/welcome.ejs
@@ -1,20 +1,20 @@
-<div style="color: #000; max-width: 50%; background-color: #f9f9f9; max-width: 50%; margin: 0 auto; box-shadow: 0px 0px 9px -6px black; border-radius: 10px; margin: 0 auto;">
+<div style="color:#000;background-color:#f9f9f9;border-radius:10px;padding:0 2rem;">
   <%- include('./partials/header'); %>
-  <div style="background-color: #f9f9f9; justify-content: center; align-items: center; gap:20px; box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1); padding: 40px 70px;">
-    <h2 style="font-family: Whitney, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif; font-weight: 500; font-size: 20px; color: #4f545c; letter-spacing: 0.27px;">
+  <div style="background-color:#f9f9f9;justify-content:center;align-items:center;gap:20px;box-shadow:01px5pxrgba(0,0,0,0.1);padding:40px70px;">
+    <h2 style="padding:0 20px;font-family:Whitney, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;font-weight:500;font-size:20px;color:#4f545c;letter-spacing:0.27px;">
       Hey there <%= locals.name %>!
     </h2>
-    <p>
+    <p style="padding:0 20px;">
       Thank you for registering an account with
       AutoSensei. Enter this code to “Verify” your
       email.
     </p>
-    <p style="text-align: center;">
+    <p style="text-align:center;">
       <span style="font-weight: bold;font-size: 50px;">
         <%= locals.code %>
       </span>
     </p>
-    <p style="text-align: center;">
+    <p style="text-align:center;">
       Good luck on your auctions. AutoSensei Team
     </p>
   </div>
