--- a/src/mailer/templates/account-approved.ejs
+++ b/src/mailer/templates/account-approved.ejs
@@ -1,19 +1,15 @@
-<div style="color:#000;background-color:#f9f9f9;border-radius:10px;padding:0 2rem;">
-  <%- include('./partials/header'); %>
-  <div style="background-color: #f9f9f9; justify-content: center; align-items: center; gap:20px; box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1); padding: 40px 70px;">
-    <h2 style="padding:0 20px;font-family:Whitney, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;font-weight:500;font-size:20px;color:#4f545c;letter-spacing:0.27px;">
-      Your account with AutoSensei has been approved.
-    </h2>
-    <p style="text-align: center;">
-      You can now login
-    </p>
-    <div style="text-align: center;">
-      <a
-        src="<%= locals.url %>"
-        style="background-color: #c1f861; border-radius: 8px; color: black; font-weight: 600; align-items: center; padding: 5px 40px;" >
-        Go to Autosensei
-      </a>
-    </div>
+<%- include('./partials/header'); %>
+  <h2 style="padding:0 20px;font-family:Whitney, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;font-weight:500;font-size:20px;color:#4f545c;letter-spacing:0.27px;">
+    Your account with AutoSensei has been approved.
+  </h2>
+  <p style="text-align: center;">
+    You can now login
+  </p>
+  <div style="text-align: center;">
+    <a
+      href="<%= locals.url %>" target="_blank"
+      style="background-color: #c1f861; border-radius: 8px; color: black; font-weight: 600; align-items: center; padding:10px;text-decoration: none;" >
+      Go to Autosensei
+    </a>
   </div>
-  <%- include('./partials/footer'); %>
-</div>
+<%- include('./partials/footer'); %>
