--- a/src/mailer/templates/account-approved.ejs
+++ b/src/mailer/templates/account-approved.ejs
@@ -1,4 +1,9 @@
 <%- include('./partials/header'); %>
+  <div style="background-color: #22282f; padding: 40px;">
+    <p style="font-size: 30px; color: white; font-weight: 600; text-align: center">
+      Welcome to <span style=" color:  #c1f861;">AutoSensei</span>!
+    </p>
+  </div>
   <h2 style="padding:0 20px;font-family:Whitney, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;font-weight:500;font-size:20px;color:#4f545c;letter-spacing:0.27px;">
     Your account with AutoSensei has been approved.
   </h2>
