--- a/src/mailer/templates/auction-accept-dealer.ejs
+++ b/src/mailer/templates/auction-accept-dealer.ejs
@@ -2,7 +2,7 @@
   <h2 style="padding:0 20px;font-family:Whitney, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;font-weight:500;font-size:20px;color:#4f545c;letter-spacing:0.27px;">
   Hi <%= locals.dealerName %>,
   </h2>
-  <p style="text-align: center;">
+  <p style="text-align: left;">
     Congratulations on winning the auction through AutoSensei!
     <br>
     Here's the reference number for your auction: #<%= locals.auctionNumber %>.
@@ -18,7 +18,7 @@
   <p style="margin: 5px 10px">
     <%= locals.sellerName %> <%= locals.sellerPhone %>
   </p>
-  <p style="text-align: center;">
+  <p style="text-align: left;">
     <br>
     You've been successfully charged $300 via Stripe for the auction won.
     <br>
