feature: Notification Mail

--- a/src/mailer/templates/auction-accept-dealer.ejs
+++ b/src/mailer/templates/auction-accept-dealer.ejs
@@ -7,8 +7,6 @@
     <br>
     Here's the reference number for your auction: #<%= locals.auctionNumber %>.
     <br>
-    You can now login
-    <br>
     The seller has indicated that the vehicle will be dropped off by <%= locals.dropOff %>.
     <br>
     Please coordinate with the seller to arrange a suitable drop-off time within your business hours.
@@ -20,11 +18,13 @@
   </p>
   <p style="text-align: left;">
     <br>
-    You've been successfully charged $300 via Stripe for the auction won.
+    You've been successfully charged $300 + tax via Stripe for the auction won.
     <br>
-    Should there be any valid reasons for canceling the deal based on your final inspection, please inform us, and we'll initiate a refund for the processed payment.
+    Should there be any valid reasons for canceling the deal based on your final inspection, please inform us, and we'll initiate a refund for the processed payment after reviewing and confirming the reason to be valid..
     <br>
     Ensure clear communication with the seller regarding payment expectations. Upon receiving the vehicle, mark it as received in the completed auctions section on your dealer page to receive your final wholesale agreement via email.
+    <br>
+    Please make sure to verify that the ownership matches the Drivers License of the seller to protect your dealership from any fraudulent transactions.
     <br>
     Thank you once again for choosing AutoSensei.
     <br>
