feature: Better mail service

--- a/templates/contract.ejs
+++ b/templates/contract.ejs
@@ -242,7 +242,7 @@
       <div class="header">
         <div class="header_one">
           <h1> <%= locals.dealer_company_name %> </h1>
-          <p><%= locals.address_line_1 %> - <%= locals.address_line_2 %></p>
+          <p><%= locals.address_line_1 %>, <%= locals.address_line_2 %></p>
           <p><%= locals.city %>, <%= locals.state %></p>
           <div class="header_code-phone">
             <p><%= locals.postal_code %></p>
