--- a/src/mailer/templates/auction-notification.ejs
+++ b/src/mailer/templates/auction-notification.ejs
@@ -1,9 +1,9 @@
 <%- include('./partials/header'); %>
-  <h2 style="padding:0 20px;font-family:Whitney, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;font-weight:500;font-size:20px;color:#4f545c;letter-spacing:0.27px;">
-  Hi <%= locals.name %>,
-  </h2>
   <div
     style="margin: 0 auto;max-width: 500px;padding: 20px;gap: 20px;">
+    <h2 style="padding:0 20px;font-family:Whitney, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;font-weight:500;font-size:20px;color:#4f545c;letter-spacing:0.27px;">
+      Hi <%= locals.name %>, here are todays Auctions!
+    </h2>
 
     <% for (let auction of locals.auctions.slice(0,4)) { %>
       <div style="background-color: white;margin-top: 20px;width: 100%;padding:10px;flex-grow: 1;box-shadow: 0px 0px 6px -2px black;border-radius: 10px;">
@@ -11,13 +11,15 @@
           style="width: 100%;height: 250px;object-fit: cover;border-top-left-radius: 10px;border-top-right-radius: 10px;"
           src="<%= locals.baseUrl + auction.vehicleDetails.exteriorPhotos[0] %>">
         <p style="text-align: left;padding: 0px 8px;margin-top: 8px">
-          <%= auction.vehicleDetails.make %> <%= auction.vehicleDetails.model %> (<%= auction.vehicleDetails.year %>)
+          <strong>
+            <%= auction.vehicleDetails.make %> <%= auction.vehicleDetails.model %> (<%= auction.vehicleDetails.year %>)
+          </strong>
         </p>
-        <p style="text-align: left;padding: 0px 8px;">
-          <%= auction.vehicleDetails.color %>
+        <p style="text-align: left;padding: 0px 4px;">
+          Color: <%= auction.vehicleDetails.color %>
         </p>
-        <p style="text-align: left;padding: 0px 8px;">
-          Start Time: <%= auction.startDate.toLocaleTimeString() %>
+        <p style="text-align: left;padding: 0px 4px;">
+          Start Time: <%= auction.startDate.toLocalTimeString() %>
         </p>
       </div>
     <% } %>
