fix: locale time default

--- a/src/mailer/templates/auction-notification.ejs
+++ b/src/mailer/templates/auction-notification.ejs
@@ -19,7 +19,7 @@
           Color: <%= auction.vehicleDetails.color %>
         </p>
         <p style="text-align: left;padding: 0px 4px;">
-          Start Time: <%= auction.startDate.toLocalTimeString() %>
+          Start Time: <%= auction.startDate.toLocaleTimeString() %>
         </p>
       </div>
     <% } %>
