--- a/src/mailer/templates/auction-notification.ejs
+++ b/src/mailer/templates/auction-notification.ejs
@@ -2,7 +2,7 @@
   <div
     style="margin: 0 auto;max-width: 500px;padding: 20px;gap: 20px;">
     <h2 style="padding:0 20px;font-family:Whitney, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;font-weight:500;font-size:20px;color:#4f545c;letter-spacing:0.27px;">
-      Hi <%= locals.name %>, here are todays Auctions!
+      Hi <%= locals.name %>, Here are some featured Auctions:
     </h2>
 
     <% for (let auction of locals.auctions.slice(0,4)) { %>
